WIP: Migrate users of String.format()
Use String.formatted() instead.

Change-Id: Ieb6732fb6452f715656ad3e20ecc2928112d0fac
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>